<resources>
    <string name="app_name">BA herd management</string>
    <string name="export" translatable="false">&lt;/&gt; Export</string>

    <!-- Nachrichten des Rindviehs -->
    <string name="rindvieh_nix_acker">%1$s roars like a spit: There is no field!</string>
    <string name="rindvieh_vor_mir_kein_acker">%1$s stands there and shakes his head: There is no field in front of me!</string>
    <string name="rindvieh_hinter_mir_kein_acker">%1$s stands there and shakes his head: There is no field behind me!</string>
    <string name="rindvieh_kein_gras">%1$s stands there and shakes his head: There is no grass at all!</string>
    <string name="rindvieh_kein_eimer">%1$s stands there and shakes his head: there is no bucket!</string>
    <string name="rindvieh_erst_fressen">%1$s stands there and shakes his head: I have to eat first!</string>
    <string name="rindvieh_nix_zu_rauchen">%1$s stands there and shakes his head: There is nothing to smoke here!</string>
    <string name="grassBtn">eat grass</string>
    <string name="rauchBtn">smoke weed</string>
    <string name="milchBtn">give milk</string>
    <string name="kuhBtn_on">cow die</string>
    <string name="kuhBtn_off">cow revive</string>
    <string name="kuhBtn">cow Yes/no</string>
    <string name="titel">herd management</string>
</resources>
