<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="herdenmanagement.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Switch
        android:id="@+id/kuhBtn"
        android:layout_width="347dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/kuhBtn"
        android:textOff="@string/kuhBtn_off"
        android:textOn="@string/kuhBtn_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acker_view" />

    <Button
        android:id="@+id/milchBtn"
        android:layout_width="123dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/milchBtn"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rauchBtn"
        android:layout_width="121dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rauchBtn"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/milchBtn"
        app:layout_constraintStart_toEndOf="@+id/grasBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/grasBtn"
        android:layout_width="123dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grassBtn"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <herdenmanagement.view.AckerView
        android:id="@+id/acker_view"
        android:layout_width="394dp"
        android:layout_height="605dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </herdenmanagement.view.AckerView>

</android.support.constraint.ConstraintLayout>
